hphp/test/quick/record-final-inherit.php.expectf
Fatal error: Record B may not inherit from final record A in %s/record-final-inherit.php on line 6
